@@ -116,8 +116,6 @@
         "Accèder à l'interface de l'IPX": "Accèder à l'interface de l'IPX"
     },
     "plugins\/ipx800v2\/plugin_info\/configuration.php": {
-        "Faire un don au développeur": "Faire un don au développeur",
-        "Faire un don via Paypal au développeur": "Faire un don via Paypal au développeur",
         "Temporisation minumum entre deux lectures en secondes": "Temporisation minumum entre deux lectures en secondes",
         "Trop diminuer cette valeur peut rendre instable votre serveur": "Trop diminuer cette valeur peut rendre instable votre serveur"
     }
