@@ -21,6 +21,5 @@ C'est tout à fait possible via https://github.com/guenneguezt/plugin-ipx800v2[g
 
 .Pourquoi le plugin est gratuit ?
 --
-Ce plugin est gratuit pour que chacun puisse en profiter simplement. Si vous souhaitez tout de même faire un don au développeur du plugin, utilisez le lien suivant.
-link:https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=UCM4C6ZMGWBEJ[Faire un don au développeur du plugin]
+Ce plugin est gratuit pour que chacun puisse en profiter simplement. Si vous souhaitez tout de même faire un don au développeur du plugin, merci de me faire un MP via le forum.
 --
